--- a/css/style.css
+++ b/css/style.css
@@ -63,16 +63,17 @@ header #logo{
 }
 
 header #logo a{
-    color: #939393;
+    color: #999999;
     font-size: 2em;
     font-family: Times New Roman, sans-serif;
 }
 
-header #logo span{
-    color: #e36565;
+header #logo span {
+	color: #ff0040;
 }
 
-header #menuHead{
+
+header #menuHead {
     width: 44%;
     float: left;
 }
@@ -80,13 +81,14 @@ header #menuHead{
 header #menuHead div{
     float: left;
     padding: 5px;
-    background-color: #c8c8c8;
-    border-radius: 10px;
+    background-color: #aaaaaa;
+    border-radius: 13px;
     color: #fff;
+	font-family: Times New Roman Bold, sans-serif;
 }
 
 header #menuHead div:hover{
-    background-color: #e7e7e7;
+    background-color: #bbbbbb;
 }
 
 header #regAuth{
@@ -158,6 +160,12 @@ footer{
 footer #social{
     float: left;
     width: 50%;
+}
+
+footer #social img {
+    width: 30px;
+	float: left;
+	height: 30px;
 }
 
 footer #rights{
