--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,78 @@ header #regAuth{
     padding: 1%;
 }
 
+#wrapper #leftCol #bigArticle img, #wrapper #leftCol .article img{
+    width: 100%;
+    float: left;
+    margin-bottom: 10px;
+}
+
+#wrapper #leftCol #bigArticle h2, #wrapper #leftCol .article h2{
+    font-weight: normal;
+    font-size: 1.4em;
+    color: #9a9a9a;
+    font-family: Comic Sans MS, sans-serif;
+}
+
+#wrapper #leftCol #bigArticle p, #wrapper #leftCol .article p{
+    width:90%;
+    margin-left: 5%;
+}
+
+#wrapper #leftCol #bigArticle div.more, #wrapper #leftCol .article div.more{
+    padding: 5px;
+    border-radius: 5px;
+    background-color: #878787;
+    color: #fff;
+    width:10%;
+    text-align: center;
+    margin-top: 10px;
+}
+
+#wrapper #leftCol .article div.more{
+    width: 20%;
+}
+
+#wrapper #leftCol input{
+    width:40%;
+    margin-left: 40%;
+    float:left;
+    border-radius: 5px;
+    border: 2px solid silver;
+    padding:5px;
+    color: black;
+    margin-bottom: 10px;
+    font-size: 1.2EM;
+
+}
+
+#wrapper #leftCol textarea{
+    width:50%;
+    height: 150px;
+    margin-left: 25%;
+    float: left;
+    border-radius: 5px;
+    border: 2px solid silver;
+    padding:5px;
+    color: black;
+    margin-bottom: 10px;
+    font-size: 1.2EM;
+    resize:none;
+}
+
+
+#wrapper #leftCol #bigArticle div.more:hover, #wrapper #leftCol .article div.more:hover{
+    background-color: #2a2a2a;
+}
+
+#wrapper #leftCol .article{
+    width: 40%;
+    margin-left: 5%;
+    background-color: #f6f6f6;
+    padding: 1%;
+    float: left;
+}
+
 #wrapper #rightCol{
     width: 20%;
     float: left;
@@ -141,6 +213,15 @@ header #regAuth{
     margin-bottom: 20px;
     border: 2px solid silver;
     box-sizing: border-box;
+}
+/*About us styles*/
+
+#wrapper #leftCol #about_us{
+    width: 76%;
+    margin-left: 10%;
+    border: 1px solid silver;
+    background-color: #f4f4f4;
+    padding:2%;
 }
 
 /*Footer styles*/
